# metu2022

RAS/gcdf/: .clang-format  Doxyfile  Makefile.am  configure.ac  flake.nix
RAS/gcdf/src/: Makefile.am  gcdf.c  gcdf.h
RAS/gcdf/tests/: Makefile.am  gcd_test_1.c  gcd_test_2.c  gcd_test_3.c  gcd_test_4.c  lcf_test_1.c  lcf_test_2.c  lcf_test_3.c  lcf_test_4.c
RAS/primes/: .clang-format  Doxyfile  Makefile.am  configure.ac  flake.nix
RAS/primes/src/: Makefile.am  primes.c  primes.h
RAS/primes/tests/: Makefile.am  is_prime_test_1.c  is_prime_test_2.c  is_prime_test_3.c  is_prime_test_4.c
